--- a/docs/css/style-taxon.css
+++ b/docs/css/style-taxon.css
@@ -144,7 +144,7 @@
     width: 12px;
     height: 12px;
     display: inline-block;
-    background-image: url(../../images/external-link.svg);
+    background-image: url(../images/external-link.svg);
     background-repeat: no-repeat;
     background-size: 12px;
     margin-left: 5px;
